--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valentine's day</title>
+    <title>hikhok</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -21,7 +21,7 @@
                 </div>
             </div>
             <div class="developed-by">
-                <p>Happy Valentine's Day labyu</p>
+                <p>Happy Valentine's Day po labyu</p>
             </div>
             <div class="heart"></div>
             <div class="click-me">
