--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
             <div class="envelope">
                 <div class="letter">
                     <div class="text">
-                        <strong>Dear Thea❤️</strong>
+                        <strong>HAPPY VALENTINE'S DAY THEAAA❤️</strong>
                         <p>
-                           dfewdf3,mdfedfedfg edgfedfedf efdffdf dfdffd fdfdfdf dfdffff fffd fdffd fdfdfd fdfff ffdfd fd ff fdf fd fd fd fdff fffd fdf fdfd fdff fdf dfewdf3,mdfedfedfg edgfedfedf efdffdf dfdffd fdfdfdf dfdffff fffd fdffd fdfdfd fdfff ffdfd fd ff fdf fd fd fd fdff fffd fdf fdfd fdff fdf   🌹
+                           Hindi ako magaling sa mga ganto ganto pero ayun, pasensya na kung bakit nag tampo ka sa'kin kahapon sorry po kung may nagawa ako sayong hindi mo gusto, pero ayun thankful ako na
+                          nandito ka para sa'kin, goodluck po sa checkup mo sa friday at goodluck din po next week para sa surgery mo!! hindi ko talaga alam sasabihin ko uhu pero take care po!!. Happy Valentine's DAY I LOVE YOUUU🌹
                         </p>
                     </div>
                 </div>
@@ -25,7 +26,7 @@
             </div>
             <div class="heart"></div>
             <div class="click-me">
-                <p>itutok mo lang yung cursor sa heart ehe </p>
+                <p>i-tutok mo lang yung cursor sa heart ehe </p>
             </div>
         </div>
     </div>
